# arduino-projects

./: Cargo.toml  Justfile  README.md  main.c  rust-toolchain.toml
.cargo/: config.toml
balance-sensor-sw-520/: main.c
buzzer/: main.c
crates/blink/: Cargo.toml  README.md
crates/light-alarm/: Cargo.toml  README.md
crates/light-alarm/src/: main.rs
crates/movement-sensor/: Cargo.toml  README.md
crates/movement-sensor/src/: main.rs
crates/traffic-lights/: Cargo.toml
crates/traffic-lights/src/: main.rs
