[workspace]
members = [
    "crates/blink",
    "crates/traffic-lights",
]
resolver = "2"

[workspace.dependencies]
embedded-hal = "0.2.3"
nb = "0.1.2"
panic-halt = "0.2.0"
ufmt = "0.2.0"

[workspace.dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "3e362624547462928a219c40f9ea8e3a64f21e5f"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
